@@ -44,8 +44,8 @@ function CheckNetwork {
 
 function AddRepos {
     echo "Adding repo..."
-    wget https://software.paravelsystems.com/ubuntu/dists/jammy/main/Paravel-Ubuntu-22.04-Test.gpg -P /etc/apt/trusted.gpg.d/
-    wget https://software.paravelsystems.com/ubuntu/dists/jammy/main/Paravel-Ubuntu-22.04-Test.list -P /etc/apt/sources.list.d/
+    wget https://software.paravelsystems.com/ubuntu/dists/noble/main/Paravel-Ubuntu-24.04-Repo.gpg -P /etc/apt/trusted.gpg.d/
+    wget https://software.paravelsystems.com/ubuntu/dists/noble/main/Paravel-Ubuntu-24.04-Repo.list -P /etc/apt/sources.list.d/
     apt update
     apt -y install ubuntu-rivendell-installer
 }
