@@ -213,3 +213,6 @@
 	in 'docs/mint21_cleanups.txt'.
 2024-04-22 Fred Gleason <fredg@paravelsystems.com>
 	* Forked to branch 'noble_24.04'.
+2024-04-30 Fred Gleason <fredg@paravelsystems.com>
+	* Changed the package version to 0.0.0noble.
+	* Modified basic metadata to reflect Ubuntu 24.04.
